--- a/horned-big/Makefile
+++ b/horned-big/Makefile
@@ -33,7 +33,7 @@ o2500000.owx:
 	$(CMD) 2500000 > out/o250000.owx
 
 o5000000.owx:
-	$(CMD) 5000000 > out/5000000.owx
+	$(CMD) 5000000 > out/o500000.owx
 
 o10000000.owx:
 	$(CMD) 10000000 > out/o1000000.owx
