Simplify make commands

--- a/horned-parse/Makefile
+++ b/horned-parse/Makefile
@@ -1,64 +1,58 @@
-all: clean out
+all: test
 
-clean:
-	- rm -r out
-
-out:
-	- mkdir out
-	
 CMD=./horned-parse
 LCMD=systemd-run --user --scope -p MemorySwapMax=0M
 RSC=../resources
 
-test: out
-	$(CMD) $(RSC)/and.owl > out/test_owl.owx
-	$(CMD) $(RSC)/and.owx > out/test_owx.owx
+test:
+	$(CMD) $(RSC)/and.owl
+	$(CMD) $(RSC)/and.owx
 	
 bfo.owl:
-	$(CMD) $(RSC)/bfo.owl > out/bfo_owl.owx
+	$(CMD) $(RSC)/bfo.owl
 	
 bfo.owx:
-	$(CMD) $(RSC)/bfo.owx > out/bfo_owx.owx
+	$(CMD) $(RSC)/bfo.owx
 	
 chebi.owl:
-	$(CMD) $(RSC)/chebi.owl > out/chebi_owl.owx
+	$(CMD) $(RSC)/chebi.owl
 
 chebi.owx:
-	$(CMD) $(RSC)/chebi.owx > out/chebi_owx.owx
+	$(CMD) $(RSC)/chebi.owx
 
 go.owl:
-	$(CMD) $(RSC)/go.owl > out/go_owl.owx
+	$(CMD) $(RSC)/go.owl
 	
 go.owx:
-	$(CMD) $(RSC)/go.owx > out/go_owx.owx
+	$(CMD) $(RSC)/go.owx
 	
 ncbitaxon.owl:
-	$(CMD) $(RSC)/ncbitaxon.owl > out/ncbitaxon_owl.owx
+	$(CMD) $(RSC)/ncbitaxon.owl
 	
 ncbitaxon.owx:
-	$(CMD) $(RSC)/ncbitaxon.owx > out/ncbitaxon_owx.owx
+	$(CMD) $(RSC)/ncbitaxon.owx
 
 limit-bfo.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owl > out/bfo_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owl
 
 limit-bfo.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owx > out/bfo_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owx
 
 limit-chebi.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owl > out/chebi_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owl
 
 limit-chebi.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owx > out/chebi_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owx
 
 limit-go.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owl > out/go_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owl
 
 limit-go.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owx > out/go_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owx
 
 limit-ncbitaxon.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owl > out/ncbitaxon_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owl
 
 limit-ncbitaxon.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owx > out/ncbitaxon_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owx
 
