--- a/py-horned-parse/Makefile
+++ b/py-horned-parse/Makefile
@@ -1,74 +1,58 @@
-all: clean out
-
-clean:
-	- rm -r out
-
-out:
-	- mkdir out
+all: test
 
 CMD=python3 py-horned-parse.py
 LCMD=systemd-run --user --scope -p MemorySwapMax=0M
 RSC=../resources
 
-test: out
+test:
 	$(CMD) $(RSC)/and.owl 
-	mv temp.owx out/test_owl.owx
 	$(CMD) $(RSC)/and.owx
-	mv temp.owx out/test_owx.owx
-	
+
 bfo.owl:
 	$(CMD) $(RSC)/bfo.owl
-	mv temp.owx out/bfo_owl.owx
-	
+
 bfo.owx:
 	$(CMD) $(RSC)/bfo.owx
-	mv temp.owx out/bfo_owx.owx
-	
+
 chebi.owl:
 	$(CMD) $(RSC)/chebi.owl
-	mv temp.owx out/chebi_owl.owx
 
 chebi.owx:
 	$(CMD) $(RSC)/chebi.owx
-	mv temp.owx out/chebi_owx.owx
 
 go.owl:
 	$(CMD) $(RSC)/go.owl
-	mv temp.owx out/go_owl.owx
-	
+
 go.owx:
 	$(CMD) $(RSC)/go.owx
-	mv temp.owx out/go_owx.owx
-	
+
 ncbitaxon.owl:
 	$(CMD) $(RSC)/ncbitaxon.owl
-	mv temp.owx out/ncbitaxon_owl.owx
-	
+
 ncbitaxon.owx:
 	$(CMD) $(RSC)/ncbitaxon.owx
-	mv temp.owx out/ncbitaxon_owx.owx
 
 limit-bfo.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owl > out/bfo_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owl
 
 limit-bfo.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owx > out/bfo_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/bfo.owx
 
 limit-chebi.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owl > out/chebi_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owl
 
 limit-chebi.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owx > out/chebi_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/chebi.owx
 
 limit-go.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owl > out/go_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owl
 
 limit-go.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owx > out/go_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/go.owx
 
 limit-ncbitaxon.owl:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owl > out/ncbitaxon_owl.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owl
 
 limit-ncbitaxon.owx:
-	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owx > out/ncbitaxon_owx.owx
+	$(LCMD) -p MemoryMax=$(var) $(CMD) $(RSC)/ncbitaxon.owx
 
