Clean up and Ensure max heap size of 10G

--- a/owl-api-big/Makefile
+++ b/owl-api-big/Makefile
@@ -6,8 +6,7 @@ clean:
 out:
 	- mkdir out
 
-CMD=java -jar owl-api-big-1.0-SNAPSHOT-jar-with-dependencies.jar
-MCMD=java -Xms1G -Xmx10G -jar owl-api-big-1.0-SNAPSHOT-jar-with-dependencies.jar
+CMD=java -Xmx10G -jar owl-api-big-1.0-SNAPSHOT-jar-with-dependencies.jar
 
 test: out
 	$(CMD) 5 > out/test.owl
@@ -44,5 +43,3 @@ o10000000.owx:
 o20000000.owx:
 	$(CMD) 20000000 > out/o2000000.owx
 
-more-o20000000.owx:
-	$(MCMD) 20000000 > out/o2000000.owx
